[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Images/story-ui-assets.res" type="SpriteFrames" id=1]
[ext_resource path="res://Assets/Images/Difficulties/normal.png" type="Texture" id=2]
[ext_resource path="res://Scenes/StoryMode/DifficultySpr.gd" type="Script" id=3]

[node name="Difficulty" type="Node2D"]
position = Vector2( -192, 0 )
script = ExtResource( 3 )

[node name="LeftArrow" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "arrow left"

[node name="DifficultySpr" type="Sprite" parent="."]
position = Vector2( 192, 0 )
texture = ExtResource( 2 )

[node name="RightArrow" type="AnimatedSprite" parent="."]
position = Vector2( 384, 0 )
frames = ExtResource( 1 )
animation = "arrow right"
